push login form

--- a/client/login.html
+++ b/client/login.html
@@ -13,6 +13,10 @@
 
     <link rel="stylesheet" href="./assets/stylesheets/style.css">
 
+    <!-- Google Fonts -->
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,700i&display=swap" rel="stylesheet">
+
     
 </head>
 <body>
@@ -27,7 +31,7 @@
                 <ul class="menu menu_flex">
                     <li class="menu_items">Name</li>
                     <li class="menu_items">
-                        <button class="btn">Log in</button>
+                        <button class="btn">Sign Up</button>
                     </li>
                 </ul>
         </div>
@@ -39,10 +43,6 @@
 
         <section class="form_section">
             <div class="container form_wrapper">
-                <div class="user_icon_wrapper">
-                    <i class="fas fa-user user_icon"></i>
-                </div>
-
                 <h3 class="form_heading">Log In</h3>
 
                 <form class="login_from">
