Push Sign Up Form

--- a/client/signup.html
+++ b/client/signup.html
@@ -31,7 +31,7 @@
                 <ul class="menu menu_flex">
                     <li class="menu_items">Name</li>
                     <li class="menu_items">
-                        <button class="btn">Sign Up</button>
+                        <button class="btn">Log In</button>
                     </li>
                 </ul>
         </div>
@@ -39,13 +39,14 @@
 
     <main>
         
-        <!-- Login Form -->
+        <!-- Sign Up Form -->
 
         <section class="form_section">
             <div class="container form_wrapper">
-                <h3 class="form_heading">Log In</h3>
+                <h3 class="form_heading">Sign Up</h3>
 
                 <form class="login_from">
+                    <input type="text" placeholder="Username" class="user_info">
                     <input type="email" placeholder="Email" class="user_info">
                     <input type="password" class="user_info" placeholder="Password">
                     <input type="submit" class="submit_btn" value="Submit">
